--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -25,9 +25,9 @@ jobs:
           terraform_version: 1.0.1
           terraform_wrapper: false
 
-      - name: Terraform Format
-        id: fmt
-        run: terraform fmt -check
+      - name: Terraform validate
+        id: validate
+        run: terraform validate
 
       - name: Terraform Init
         id: init
